--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.swiper {
-  width: 100%;
+.mySwiper {
+  width: inherit !important;
   height: 100%;
 }
 
@@ -14,9 +14,14 @@
   align-items: center;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.swiper-img {
+  border-radius: 10px;
+  width: 300px;
+  height: 180px;
+}
+
+.card-img {
+  border-radius: 10px;
+  width: 300px;
+  height: 180px;
 }
