--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,27 @@
   width: 300px;
   height: 180px;
 }
+
+.grid_start_content {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.grid_end_content {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+@media (max-width: 420px) {
+  /* Adjust breakpoint as needed */
+  .grid_start_content {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .grid_end_content {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
